# ns_trcd_analysis

./: README.md  pyproject.toml  setup.py
ns_trcd_analysis/: __init__.py  compute.py  core.py  delta_a.py  extract.py  gfit.py  images.py  main.py  noise.py  raw2hdf5.py  slices.py  veusz.py
