[tool.poetry]
name = "ns_trcd_analysis"
version = "0.32.0"
description = ""
authors = ["Zach Mitchell <zmitchell@fastmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.5"
click = "^8.0.0"
h5py = "^2.10.0"
matplotlib = "^3.2.1"
scipy = "^1.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.5.3"
flake8 = "^3.8.4"
rope = "^0.18.0"

[tool.poetry.scripts]
analysis = "ns_trcd_analysis.main:cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
